Fix a bug where visited link color was not being applied for external icon on safari

--- a/packages/core/src/components/link/link.css
+++ b/packages/core/src/components/link/link.css
@@ -10,6 +10,9 @@
 .hds-link:visited {
   color: var(--link-visited-color);
 }
+.hds-link:visited svg g path {
+  fill: var(--link-visited-color);
+}
 
 .hds-link:focus {
   border: 3px solid var(--color-coat-of-arms);
